--- a/package.json
+++ b/package.json
@@ -47,14 +47,6 @@
                 "when": "editorHasReferenceProvider"
             },
             {
-                "key": "ctrl+j",
-                "command": "-workbench.action.togglePanel"
-            },
-            {
-                "key": "ctrl+n",
-                "command": "-workbench.action.files.newUntitledFile"
-            },
-            {
                 "key": "f4",
                 "command": "references-view.next",
                 "when": "reference-list.hasResult && references-view.canNavigate"
@@ -85,10 +77,6 @@
                 "when": "editorTextFocus"
             },
             {
-                "key": "ctrl+alt+j",
-                "command": "-code-runner.runByLanguage"
-            },
-            {
                 "key": "ctrl+n",
                 "command": "editor.action.nextSelectionMatchFindAction",
                 "when": "editorFocus"
@@ -99,17 +87,12 @@
                 "when": "editorFocus"
             },
             {
-                "key": "ctrl+shift+n",
-                "command": "-workbench.action.newWindow"
+                "key": "ctrl+alt+n",
+                "command": "workbench.action.files.newUntitledFile"
             },
             {
                 "key": "alt+oem_2",
                 "command": "editor.action.commentLine",
-                "when": "editorTextFocus && !editorReadonly"
-            },
-            {
-                "key": "ctrl+oem_2",
-                "command": "-editor.action.commentLine",
                 "when": "editorTextFocus && !editorReadonly"
             },
             {
@@ -120,20 +103,6 @@
             {
                 "key": "ctrl+j",
                 "command": "workbench.action.gotoLine"
-            },
-            {
-                "key": "ctrl+g",
-                "command": "-workbench.action.gotoLine"
-            },
-            {
-                "key": "ctrl+shift+f",
-                "command": "-workbench.view.search",
-                "when": "workbench.view.search.active"
-            },
-            {
-                "key": "ctrl+oem_2",
-                "command": "-toggleExplainMode",
-                "when": "suggestWidgetVisible"
             },
             {
                 "key": "ctrl+oem_2",
@@ -153,35 +122,6 @@
                 "key": "ctrl+shift+g",
                 "command": "search.action.focusPreviousSearchResult",
                 "when": "hasSearchResult || inSearchEditor"
-            },
-            {
-                "key": "ctrl+oem_comma",
-                "command": "-workbench.action.openSettings"
-            },
-            {
-                "key": "alt+oem_4",
-                "command": "-extension.goto-symbol-stack.goPrevOnStack"
-            },
-            {
-                "key": "alt+oem_6",
-                "command": "-extension.goto-symbol-stack.goToSymbolDeclaration"
-            },
-            {
-                "key": "ctrl+shift+oem_comma",
-                "command": "-editor.action.inPlaceReplace.up",
-                "when": "editorTextFocus && !editorReadonly"
-            },
-            {
-                "key": "shift+alt+oem_6",
-                "command": "-extension.goto-symbol-stack.goNextOnStack"
-            },
-            {
-                "key": "ctrl+t",
-                "command": "extension.goto-symbol-stack.goToSearchSymbolDeclaration"
-            },
-            {
-                "key": "alt+t",
-                "command": "-extension.goto-symbol-stack.goToSearchSymbolDeclaration"
             },
             {
                 "key": "ctrl+oem_period",
