--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publisher": "AnkurGoyal",
     "displayName": "argprokeymap",
     "description": "this is a customised keymap by Ankur",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "engines": {
         "vscode": "^1.56.0"
     },
@@ -23,10 +23,8 @@
         "type": "git",
         "url": "https://github.com/argankur/argprokeymap.git"
     },
-
     "contributes": {
-        "keybindings":
-        [
+        "keybindings": [
             {
                 "key": "shift+f8",
                 "command": "highlightwords.addHighlight"
