--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
         "keybindings": [
             {
                 "key": "shift+f8",
+                "command": "-editor.action.marker.prevInFiles",
+                "when": "editorFocus"
+            },
+            {
+                "key": "shift+f8",
                 "command": "highlightwords.addHighlight"
             },
             {
@@ -35,23 +40,8 @@
                 "when": "editorHasDefinitionProvider && editorTextFocus && !isInEmbeddedEditor"
             },
             {
-                "key": "f12",
-                "command": "editor.action.revealDefinition",
-                "when": "editorHasDefinitionProvider && editorTextFocus && !isInEmbeddedEditor"
-            },
-            {
-                "key": "ctrl+oem_6",
-                "command": "-editor.action.indentLines",
-                "when": "editorTextFocus && !editorReadonly"
-            },
-            {
                 "key": "ctrl+shift+f8",
                 "command": "highlightwords.removeAllHighlights"
-            },
-            {
-                "key": "alt+oem_2",
-                "command": "-gitlens.gitCommands",
-                "when": "!gitlens:disabled && config.gitlens.keymap == 'alternate'"
             },
             {
                 "key": "ctrl+shift+oem_2",
@@ -84,11 +74,6 @@
                 "when": "editorTextFocus"
             },
             {
-                "key": "ctrl+alt+k",
-                "command": "-bookmarks.toggle",
-                "when": "editorTextFocus"
-            },
-            {
                 "key": "ctrl+n",
                 "command": "editor.action.nextSelectionMatchFindAction",
                 "when": "editorFocus"
@@ -104,7 +89,17 @@
             },
             {
                 "key": "alt+oem_2",
+                "command": "-gitlens.gitCommands",
+                "when": "!gitlens:disabled && config.gitlens.keymap == 'alternate'"
+            },
+            {
+                "key": "alt+oem_2",
                 "command": "editor.action.commentLine",
+                "when": "editorTextFocus && !editorReadonly"
+            },
+            {
+                "key": "ctrl+oem_6",
+                "command": "-editor.action.indentLines",
                 "when": "editorTextFocus && !editorReadonly"
             },
             {
@@ -118,12 +113,31 @@
             },
             {
                 "key": "ctrl+oem_2",
+                "command": "-editor.action.commentLine",
+                "when": "editorTextFocus && !editorReadonly"
+            },
+            {
+                "key": "ctrl+oem_2",
+                "command": "-toggleExplainMode",
+                "when": "suggestWidgetVisible"
+            },
+            {
+                "key": "ctrl+oem_2",
+                "command": "-workbench.action.terminal.sendSequence",
+                "when": "terminalFocus"
+            },
+            {
+                "key": "ctrl+oem_2",
                 "command": "workbench.action.findInFiles"
             },
             {
                 "key": "ctrl+shift+g",
                 "command": "-workbench.view.scm",
                 "when": "workbench.scm.active"
+            },
+            {
+                "key": "ctrl+g",
+                "command": "-workbench.action.gotoLine"
             },
             {
                 "key": "ctrl+g",
@@ -137,12 +151,39 @@
             },
             {
                 "key": "ctrl+oem_period",
+                "command": "-problems.action.showQuickFixes",
+                "when": "problemFocus"
+            },
+            {
+                "key": "ctrl+oem_period",
                 "command": "editor.action.revealDefinition",
                 "when": "editorHasDefinitionProvider && editorTextFocus && !isInEmbeddedEditor"
             },
             {
                 "key": "ctrl+oem_comma",
                 "command": "workbench.action.navigateBack"
+            },
+
+            {
+                "key": "alt+b",
+                "command": "-gitlens.toggleFileBlame",
+                "when": "editorTextFocus && config.gitlens.keymap == 'alternate' && gitlens:activeFileStatus =~ /blameable/"
+            },
+            {
+                "key": "ctrl+j",
+                "command": "-workbench.action.togglePanel"
+            },
+            {
+                "key": "alt+b",
+                "command": "workbench.action.toggleAuxiliaryBar"
+            },
+            {
+                "key": "ctrl+alt+b",
+                "command": "workbench.action.toggleSidebarPosition"
+            },
+            {
+                "key": "alt+t",
+                "command": "workbench.action.togglePanel"
             }
         ]
     }
